RESOLVED FIXED140253
http/tests/misc/acid3.html is flakey on Mavericks
https://bugs.webkit.org/show_bug.cgi?id=140253
Summary http/tests/misc/acid3.html is flakey on Mavericks
Myles C. Maxfield
Reported 2015-01-08 10:12:57 PST
[1/2] editing/selection/move-by-character-brute-force.html passed [2/2] http/tests/misc/acid3.html failed unexpectedly (text diff)
Attachments
Patch (3.69 KB, patch)
2015-01-09 18:10 PST, Myles C. Maxfield
ap: review+
ap: commit-queue-
Myles C. Maxfield
Comment 1 2015-01-09 16:39:35 PST
This is caused by <rdar://problem/19433490>
Myles C. Maxfield
Comment 2 2015-01-09 18:10:30 PST
Alexey Proskuryakov
Comment 3 2015-01-10 11:07:02 PST
Comment on attachment 244397 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244397&action=review Nice detective work! > Source/WebCore/platform/graphics/mac/SimpleFontDataMac.mm:169 > +#if __MAC_OS_X_VERSION_MIN_REQUIRED == 1090 Is this 10.9 only? My guess is that we need the workaround on 10.9 and later now. > Source/WebCore/platform/graphics/mac/SimpleFontDataMac.mm:170 > + // Workaround <rdar://problem/19433490> "Work around" is two words when one of them is a verb, and also please add a period at the end. > LayoutTests/platform/mac/TestExpectations:-1492 > -webkit.org/b/139968 [ Mavericks+ ] http/tests/misc/acid3.html [ Pass Failure ] Here's hoping that this fixes more tests, but that can be cleaned up later.
Myles C. Maxfield
Comment 4 2015-01-11 09:27:34 PST
Comment on attachment 244397 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244397&action=review >> Source/WebCore/platform/graphics/mac/SimpleFontDataMac.mm:169 >> +#if __MAC_OS_X_VERSION_MIN_REQUIRED == 1090 > > Is this 10.9 only? My guess is that we need the workaround on 10.9 and later now. I tried in 10.10 and the bug did not present itself. >> LayoutTests/platform/mac/TestExpectations:-1492 >> -webkit.org/b/139968 [ Mavericks+ ] http/tests/misc/acid3.html [ Pass Failure ] > > Here's hoping that this fixes more tests, but that can be cleaned up later. Yeah, I need to figure that out and (hopefully) unskip more tests
Alexey Proskuryakov
Comment 5 2015-01-11 09:55:01 PST
Hmm. But the test is also flaky on Yosemite, so we can't unmark it if the workaround is 10.9 only. http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Fmisc%2Facid3.html
Darin Adler
Comment 6 2015-01-12 13:18:06 PST
Comment on attachment 244397 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244397&action=review >>> Source/WebCore/platform/graphics/mac/SimpleFontDataMac.mm:169 >>> +#if __MAC_OS_X_VERSION_MIN_REQUIRED == 1090 >> >> Is this 10.9 only? My guess is that we need the workaround on 10.9 and later now. > > I tried in 10.10 and the bug did not present itself. That’s strange, given that the Apple team responsible does not claim the bug is fixed in 10.10 and is working on a fix for a future release.
Myles C. Maxfield
Comment 7 2015-01-15 09:22:16 PST
Note You need to log in before you can comment on or make changes to this bug.