http/tests/misc/acid3.html is flakey on Mavericks https://bugs.webkit.org/show_bug.cgi?id=140253

Reviewed by Alexey Proskuryakov.

Source/WebCore:

CoreText has a bug <rdar://problem/19433490> in which kerning is not applied for a font
if a CTTypesetter is created using that font before a call to CTFontTransformGlyphs. We
often create typesetters in the complex code path, so it's not obvious when this bug
might present itself. This patch simply makes a dummy invocation of
CTFontTransformGlyphs() when creating a SimpleFontData.

No new tests because this is covered by http/tests/misc/acid3.html.

* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformInit):

LayoutTests:

Remove flakey mark.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/158471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178513 268f45cc-cd09-0410-ab3c-d52691b4dbfc